--- a/index.html
+++ b/index.html
@@ -7,7 +7,20 @@
 
 </head>
 <body>
+<section class="container-fluid pt-0">
+  <div class="row">
+    <div class="col-11 col-md-10 mx-auto">
+      <div class="row card-1 white rounded">
+        <div class="col-12 col-md-6 p-3">
+          <p class="h2 text-center fontIB my-5 py-3 red-text text-darken-4">بوت استرپ ورژن ۴ راستچین شده</p>
+          <hr>
+                </div>
+        <div class="col-12 col-md-5 mx-auto">
 
-<h1>سلام دنیا</h1>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 </body>
 </html>
