--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fa" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <title>setshid</title>
+    <title>AMIN MOTERASSEL</title>
     <link rel="stylesheet" href="bootstrap.css">
 
 </head>
@@ -10,13 +10,13 @@
 <section class="container-fluid pt-0">
   <div class="row">
     <div class="col-11 col-md-10 mx-auto">
-      <div class="row card-1 white rounded">
+      <div class="row light-card-1 white rounded">
         <div class="col-12 col-md-6 p-3">
           <p class="h2 text-center fontIB my-5 py-3 red-text text-darken-4">بوت استرپ ورژن ۴ راستچین شده</p>
           <hr>
                 </div>
         <div class="col-12 col-md-5 mx-auto">
-
+<img src="Artboard%201.png" alt="" class="img-fluid">
         </div>
       </div>
     </div>
