--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 </head>
 <body>
-<section class="container-fluid pt-0 h-50">
+<section class="container-fluid pt-0 h-50 d-block">
   <div class="row">
     <div class="col-11 col-md-10 mx-auto">
       <div class="row light-card-1 bg-white rounded">
