--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <section class="container-fluid pt-0 h-50 my-9 py-9 d-block">
   <div class="row">
     <div class="col-11 col-md-10 mx-auto">
-      <div class="row light-card-1 bg-white rounded">
+      <div class="row light-card-1 card-hover bg-white rounded">
         <div class="col-12 col-md-6 p-3">
           <p class="h2 text-center fontIB my-5 py-3 red-text text-darken-4">بوت استرپ ورژن ۴ راستچین شده</p>
           <hr>
