--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="col-11 col-md-10 mx-auto">
             <div class="row light-card-1 card-hover bg-white rounded">
                 <div class="col-12 col-md-6 p-3">
-                    <p class="h2 text-center fontIB my-5 py-3 red-text text-darken-4">بوت استرپ ورژن ۴ راستچین شده</p>
+                    <p class="h2 text-center fontIB mt-5 py-3 red-text text-darken-4">بوت استرپ ورژن ۴ راستچین شده</p>
                     <hr>
                     <button type="button" class="btn btn-primary btn-block mb-5 card-hover p-0"><a class="d-block p-2" href="https://creativestudio.one/">سایت شخصی من</a></button>
                 </div>
