--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
                     <p class="h2 text-center fontIB mt-2 py-3">بوت استرپ ورژن ۴ راستچین شده</p>
                     <hr>
                     <button type="button" class="btn btn-danger btn-block mb-5 border-0 card-hover p-0"><a class="d-block p-3 text-secondary" href="https://creativestudio.one/">سایت شخصی من</a></button>
+                    <button type="button" class="btn btn-danger btn-block mb-5 border-0 card-hover p-0"><a class="d-block p-3 text-secondary" href="https://codeload.github.com/AMIN-Arch/bootstrap-rtl-v4/zip/master
+">دانلود مستقیم</a></button>
                 </div>
                 <div class="col-12 col-md-5 mx-auto">
                     <img src="Artboard%201.png" alt="" class="img-fluid">
