--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 ">دانلود مستقیم</a></button>
                     <button type="button" class="btn btn-info btn-block mb-5 border-0 card-hover p-0"><a class="d-block p-3 text-secondary" href="https://creativestudio.one/">سایت شخصی من</a></button>
                 </div>
-                <div class="col-12 col-md-5 mx-auto">
+                <div class="col-12 col-md-6 py-5 px-0 mx-auto">
                     <img src="Artboard%201.png" alt="" class="img-fluid">
                 </div>
             </div>
