--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="bootstrap.css">
 </head>
 <body>
-<section class="container-fluid pt-5 d-block">
+<section class="container-fluid py-5 d-block">
     <div class="row">
         <div class="col-11 col-md-10 mx-auto">
             <div class="row light-card-1 card-hover bg-white rounded">
