--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                 <div class="col-12 col-md-6 p-3">
                     <p class="h2 text-center fontIB mt-2 py-3">بوت استرپ ورژن ۴ راست چین شده</p>
                     <hr>
-                    <button type="button" class="btn btn-danger btn-block mb-5 border-0 card-hover p-0"><a class="d-block p-3 text-secondary" href="https://codeload.github.com/AMIN-Arch/bootstrap-rtl-v4/zip/master
+                    <button type="button" class="btn btn-danger btn-block mb-5 border-0 card-hover light-card-1 p-0"><a class="d-block p-3 text-secondary" href="https://codeload.github.com/AMIN-Arch/bootstrap-rtl-v4/zip/master
 ">دانلود مستقیم</a></button>
-                    <button type="button" class="btn btn-info btn-block mb-5 border-0 card-hover p-0"><a class="d-block p-3 text-secondary" href="https://creativestudio.one/">سایت شخصی من</a></button>
+                    <button type="button" class="btn btn-info btn-block mb-5 border-0 card-hover light-card-1 p-0"><a class="d-block p-3 text-secondary" href="https://creativestudio.one/">سایت شخصی من</a></button>
                 </div>
                 <div class="col-12 col-md-6 py-5 px-0 mx-auto">
                     <img src="Artboard%201.png" alt="" class="img-fluid">
